# SquareApp

./: CMakeLists.txt  README.md
src/: main.c  square_app.c
tests/: test.c
